--- a/index.ipynb
+++ b/index.ipynb
@@ -68,11 +68,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import pandas as pd\n",
+    "from patsy import dmatrices\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('titanic.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -86,11 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "y, X = dmatrices('Survived ~ C(Pclass) + C(Sex) + Age + Fare + C(Embarked)', \n",
+    "                df, return_type = \"dataframe\")"
    ]
   },
   {
@@ -108,11 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.451316\n",
+      "         Iterations 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "logit_model = sm.Logit(y, X)\n",
+    "result = logit_model.fit()"
    ]
   },
   {
@@ -126,18 +301,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Logit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>Survived</td>     <th>  No. Observations:  </th>  <td>   712</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>  <td>   704</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     7</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>          <td>Mon, 22 Jul 2019</td> <th>  Pseudo R-squ.:     </th>  <td>0.3312</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>              <td>11:34:32</td>     <th>  Log-Likelihood:    </th> <td> -321.34</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -480.45</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th> <td>7.704e-65</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "          <td></td>            <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>        <td>    4.0518</td> <td>    0.505</td> <td>    8.025</td> <td> 0.000</td> <td>    3.062</td> <td>    5.041</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.2]</th>   <td>   -1.1522</td> <td>    0.320</td> <td>   -3.600</td> <td> 0.000</td> <td>   -1.780</td> <td>   -0.525</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.3]</th>   <td>   -2.4188</td> <td>    0.333</td> <td>   -7.265</td> <td> 0.000</td> <td>   -3.071</td> <td>   -1.766</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Sex)[T.male]</th>   <td>   -2.5169</td> <td>    0.210</td> <td>  -11.973</td> <td> 0.000</td> <td>   -2.929</td> <td>   -2.105</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Embarked)[T.Q]</th> <td>   -0.8166</td> <td>    0.570</td> <td>   -1.434</td> <td> 0.152</td> <td>   -1.933</td> <td>    0.300</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Embarked)[T.S]</th> <td>   -0.4959</td> <td>    0.270</td> <td>   -1.838</td> <td> 0.066</td> <td>   -1.025</td> <td>    0.033</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>              <td>   -0.0361</td> <td>    0.008</td> <td>   -4.640</td> <td> 0.000</td> <td>   -0.051</td> <td>   -0.021</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Fare</th>             <td>   -0.0001</td> <td>    0.002</td> <td>   -0.057</td> <td> 0.955</td> <td>   -0.005</td> <td>    0.004</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                           Logit Regression Results                           \n",
+       "==============================================================================\n",
+       "Dep. Variable:               Survived   No. Observations:                  712\n",
+       "Model:                          Logit   Df Residuals:                      704\n",
+       "Method:                           MLE   Df Model:                            7\n",
+       "Date:                Mon, 22 Jul 2019   Pseudo R-squ.:                  0.3312\n",
+       "Time:                        11:34:32   Log-Likelihood:                -321.34\n",
+       "converged:                       True   LL-Null:                       -480.45\n",
+       "                                        LLR p-value:                 7.704e-65\n",
+       "====================================================================================\n",
+       "                       coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------\n",
+       "Intercept            4.0518      0.505      8.025      0.000       3.062       5.041\n",
+       "C(Pclass)[T.2]      -1.1522      0.320     -3.600      0.000      -1.780      -0.525\n",
+       "C(Pclass)[T.3]      -2.4188      0.333     -7.265      0.000      -3.071      -1.766\n",
+       "C(Sex)[T.male]      -2.5169      0.210    -11.973      0.000      -2.929      -2.105\n",
+       "C(Embarked)[T.Q]    -0.8166      0.570     -1.434      0.152      -1.933       0.300\n",
+       "C(Embarked)[T.S]    -0.4959      0.270     -1.838      0.066      -1.025       0.033\n",
+       "Age                 -0.0361      0.008     -4.640      0.000      -0.051      -0.021\n",
+       "Fare                -0.0001      0.002     -0.057      0.955      -0.005       0.004\n",
+       "====================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "result.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your analysis here"
+    "## Your analysis here  \n",
+    "Fares p-values and emparked are above .05 so I would take them out.  "
    ]
   },
   {
@@ -151,11 +416,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "y, X = dmatrices('Survived ~ C(Pclass) + C(Sex) + Age', \n",
+    "                df, return_type = \"dataframe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.453279\n",
+      "         Iterations 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "logit_model = sm.Logit(y, X)\n",
+    "result = logit_model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Logit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>Survived</td>     <th>  No. Observations:  </th>  <td>   714</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>  <td>   709</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     4</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>          <td>Mon, 22 Jul 2019</td> <th>  Pseudo R-squ.:     </th>  <td>0.3289</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>              <td>11:52:10</td>     <th>  Log-Likelihood:    </th> <td> -323.64</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -482.26</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th> <td>2.074e-67</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "         <td></td>           <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>      <td>    3.7770</td> <td>    0.401</td> <td>    9.416</td> <td> 0.000</td> <td>    2.991</td> <td>    4.563</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.2]</th> <td>   -1.3098</td> <td>    0.278</td> <td>   -4.710</td> <td> 0.000</td> <td>   -1.855</td> <td>   -0.765</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.3]</th> <td>   -2.5806</td> <td>    0.281</td> <td>   -9.169</td> <td> 0.000</td> <td>   -3.132</td> <td>   -2.029</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Sex)[T.male]</th> <td>   -2.5228</td> <td>    0.207</td> <td>  -12.164</td> <td> 0.000</td> <td>   -2.929</td> <td>   -2.116</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>            <td>   -0.0370</td> <td>    0.008</td> <td>   -4.831</td> <td> 0.000</td> <td>   -0.052</td> <td>   -0.022</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                           Logit Regression Results                           \n",
+       "==============================================================================\n",
+       "Dep. Variable:               Survived   No. Observations:                  714\n",
+       "Model:                          Logit   Df Residuals:                      709\n",
+       "Method:                           MLE   Df Model:                            4\n",
+       "Date:                Mon, 22 Jul 2019   Pseudo R-squ.:                  0.3289\n",
+       "Time:                        11:52:10   Log-Likelihood:                -323.64\n",
+       "converged:                       True   LL-Null:                       -482.26\n",
+       "                                        LLR p-value:                 2.074e-67\n",
+       "==================================================================================\n",
+       "                     coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "----------------------------------------------------------------------------------\n",
+       "Intercept          3.7770      0.401      9.416      0.000       2.991       4.563\n",
+       "C(Pclass)[T.2]    -1.3098      0.278     -4.710      0.000      -1.855      -0.765\n",
+       "C(Pclass)[T.3]    -2.5806      0.281     -9.169      0.000      -3.132      -2.029\n",
+       "C(Sex)[T.male]    -2.5228      0.207    -12.164      0.000      -2.929      -2.116\n",
+       "Age               -0.0370      0.008     -4.831      0.000      -0.052      -0.022\n",
+       "==================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.summary()"
    ]
   },
   {
@@ -170,9 +542,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
